css(globals): force scroll bar in body to prevent layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,6 +42,10 @@
   flex-grow: 1;
 }
 
+:where(body) {
+  overflow-y: scroll;
+}
+
 :where(#__next > main) {
   display: flex;
   flex-direction: column;
